Updates for compiling with JDK 11

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	
 	<groupId>org.mobicents.servers.jainslee.tftp</groupId>
 	<artifactId>restcomm-slee-tftp</artifactId>
-	<version>7.0.0-SNAPSHOT</version>
+	<version>7.2.0-SNAPSHOT</version>
 			
 	<packaging>pom</packaging>
 	
@@ -23,8 +23,22 @@
 		<url>https://github.com/RestComm/jain-slee.tftp</url>
 	</scm>     
 	
+  <properties>
+    <compiler.plugin.version>3.8.1</compiler.plugin.version>
+		<compile.source>11</compile.source>
+  </properties>
 	<build>
 		<plugins>
+      <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${compiler.plugin.version}</version>
+				<configuration>
+					<source>${compile.source}</source>
+					<target>${compile.source}</target>
+					<debug>${compile.debug}</debug>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
